--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Proza Libre', sans-serif;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 body {
@@ -17,7 +18,7 @@ body {
 }
 
 #title {
-    font-size: 4em;
+    font-size: 2em;
     justify-self: center;
     position: relative;
     top: 3em;
@@ -32,15 +33,14 @@ main {
 }
 
 #container {
-    /* display: none; */
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2%;
-    width: 800px;
-    height: 800px;
+    width: 380px;
+    height: 380px;
 }
 
 .container-items {
@@ -75,7 +75,6 @@ i {
     height: 400px;
     position: absolute !important;
     transition: 1s !important;
-    /* display: flex; */
     justify-content: center;
     align-items: center;
     flex-direction: column;
